--- a/src/views/patient/login.ejs
+++ b/src/views/patient/login.ejs
@@ -2,7 +2,7 @@
 
 <div class="container" id="container">
     <div class="form-container sign-up-container">
-        <form action="/doctorregister">
+        <form action="#">
             <h1>Create Account</h1>
             <div class="social-container">
                 <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
