--- a/src/views/doctor/login.ejs
+++ b/src/views/doctor/login.ejs
@@ -17,7 +17,7 @@
         </form>
     </div>
     <div class="form-container sign-in-container">
-        <form action="#">
+        <form action="/doctorlogin">
             <h1>Sign in</h1>
             <div class="social-container">
                 <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
