--- a/src/views/specialist/login.ejs
+++ b/src/views/specialist/login.ejs
@@ -1,6 +1,6 @@
 <div class="container" id="container">
     <div class="form-container sign-up-container">
-        <form action="/doctorregister" method="post">
+        <form action="/medicalstoreregister">
             <h1>Create Account</h1>
             <div class="social-container">
                 <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
@@ -8,24 +8,14 @@
                 <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
             </div>
             <span>or use your email for registration</span>
-            <input type="text" name="username" id="username" placeholder="username" />
-
-            <input type="email" name="email" id="email" placeholder="Email" />
-            <input type="text" name="Specialization" id="Specialization" placeholder="Specialization" required />
-
-
-            <input type="text" name="Educationlevel" id="Educationlevel" placeholder="Educationlevel" required />
-
-
-            <input type="number" name="phone" id="phone" placeholder="phone" />
-
-
-            <input type="password" name="password" id="password" placeholder="Password" />
-            <button type="submit">Sign Up</button>
+            <input type="text" placeholder="Name" />
+            <input type="email" placeholder="Email" />
+            <input type="password" placeholder="Password" />
+            <button>Sign Up</button>
         </form>
     </div>
     <div class="form-container sign-in-container">
-        <form action="/doctorlogin" method="post">
+        <form action="/medicalstorelogin">
             <h1>Sign in</h1>
             <div class="social-container">
                 <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
@@ -33,12 +23,10 @@
                 <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
             </div>
             <span>or use your account</span>
-
-            <input type="text" name="username" id="username" placeholder="username" />
-
-            <input type="password" name="password" id="password" placeholder="Password" />
+            <input type="email" placeholder="Email" />
+            <input type="password" placeholder="Password" />
             <a href="#">Forgot your password?</a>
-            <button type="submit">Sign In</button>
+            <button>Sign In</button>
         </form>
     </div>
     <div class="overlay-container">
@@ -46,12 +34,12 @@
             <div class="overlay-panel overlay-left">
                 <h1>Welcome Back!</h1>
                 <p>To keep connected with us please login with your personal info</p>
-                <button class="submit" id="signIn">Sign In</button>
+                <button class="ghost" id="signIn">Sign In</button>
             </div>
             <div class="overlay-panel overlay-right">
                 <h1>Hello, Friend!</h1>
                 <p>Enter your personal details and start journey with us</p>
-                <button type="submit" id="signUp">Sign Up</button>
+                <button class="ghost" id="signUp">Sign Up</button>
             </div>
         </div>
     </div>
@@ -314,16 +302,15 @@
 </style>
 
 <script>
+    const signUpButton = document.getElementById('signUp');
+    const signInButton = document.getElementById('signIn');
+    const container = document.getElementById('container');
 
+    signUpButton.addEventListener('click', () => {
+        container.classList.add("right-panel-active");
+    });
 
-    // Add event listeners to form submit buttons
-        document.getElementById('signUp').addEventListener('click', function () {
-            document.getElementById('signUpForm').submit(); // Submit the sign-up form
-        });
-
-        document.getElementById('signIn').addEventListener('click', function () {
-            document.getElementById('signInForm').submit(); // Submit the sign-in form
-        });
-
-  
+    signInButton.addEventListener('click', () => {
+        container.classList.remove("right-panel-active");
+    });
 </script>
