--- a/src/views/patient/login.ejs
+++ b/src/views/patient/login.ejs
@@ -1,4 +1,4 @@
-
+<% layout ('layouts/homeboilerplate')%>
 
 <div class="container" id="container">
     <div class="form-container sign-up-container">
