--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -20,7 +20,7 @@
     <ul>
       <li><a href="/home">Home</a></li>
       <li><a href="/telepharm">TelePharm</a></li>
-      <li><a href="/teleconsult">TeleConsult</a></li>
+      <li><a href="/specialist">TeleConsult</a></li>
       <li><a href="/communityforum">Community Forums</a></li>
       <li><a href="/announcements">Announcements</a></li>
     </ul>
