--- a/src/views/doctor/doctorprofile.ejs
+++ b/src/views/doctor/doctorprofile.ejs
@@ -16,7 +16,7 @@
 
       <nav class="nav container">
         <a href="#" class="nav__logo">
-          <img class="logo" src="assets/img/logo.svg" alt="">
+          <!-- <img class="logo" src="assets/img/logo.svg" alt=""> -->
           <p class="logo__name"></p>
         </a>
 
@@ -25,7 +25,7 @@
           </ul>
 
           <div class="user__info">
-            <img src="assets/img/facility.png" alt="">
+            <!-- <img src="assets/img/facility.png" alt=""> -->
             <p class="user__name"><%= ownerData.Name %></p>
           </div>
 
