--- a/src/views/doctor/doctorprofile.ejs
+++ b/src/views/doctor/doctorprofile.ejs
@@ -47,22 +47,11 @@
       <div class="cards">
         <!-- Upcoming Pickups Card -->
         <div class="card">
-          <h2>Pickups Requests</h2>
+          <h2>Appointment Requests</h2>
           <p class="card__data"><%= ownerData.Requests.length %> requests</p>
         </div>
 
-        <!-- Total Waste Recycled Card -->
-        <div class="card">
-          <h2>Waste Recycled</h2>
-          <p class="card__data">3455 kg</p>
-        </div>
-
-        <!-- Current Credits Card -->
-        <div class="card">
-          <h2>Credits allocated</h2>
-          <p class="card__data">70 K</p>
-        </div>
-      </div>
+        
 
       <!-- authorise pickup requests -->
       <div class="pickups container">
