--- a/src/views/medicalstore/login.ejs
+++ b/src/views/medicalstore/login.ejs
@@ -1,41 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body style="background-color:rgb(138, 185, 92)">
-            <div  class="relative">
-            <img src="https://res.cloudinary.com/dtca2p99y/image/upload/v1675324993/mess/login2_pm6kbq.png" class="absolute inset-0 h-full w-full object-cover" alt="" />
-            <div class="relative bg-emerald-700 bg-opacity-90">
-            
-              <div class="relative mx-auto overflow-hidden px-4 py-16 sm:max-w-xl md:max-w-full md:px-24 lg:max-w-screen-xl lg:px-8 lg:py-20">
-                <div class="flex flex-col items-center justify-between xl:flex-row">
-                  <div class="mb-12 w-full max-w-xl xl:mb-0 xl:w-7/12 xl:pr-16">
-                    <h2 class="mb-6 max-w-lg font-sans text-3xl font-bold tracking-tight text-white sm:text-7xl sm:leading-none">Log in to your account</h2>
-                  </div>
-                  <div class="w-full max-w-xl xl:w-5/12 xl:px-8">
-                    <div class="overflow-hidden rounded-3xl border-emerald-600 bg-white p-7 shadow-2xl shadow-emerald-300 sm:p-10">
-                      <form action="/medicalstorelogin" method="post" novalidate>
-                        <div>
-                            <label for="username" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Username</label>
-                            <input type="text" name="username" id="username" class="bg-gray-50 shadow dark:border border border-gray-300 text-gray-900 sm:text-sm rounded-3xl focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Your Username" required="">
-                        </div><br>
-                        <div>
-                            <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
-                            <input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 shadow dark:border border border-gray-300 text-gray-900 sm:text-sm rounded-3xl focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
-                        </div><br>
-                        <div align="center">
-                            <button class="rounded-full border-2 border-green-500 px-6 py-1 text-green-600 transition-colors hover:bg-green-500 hover:text-white">Log In</button>
-                            </div>
-                      </form>
-                    </div>
-                  </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>RuralHealthcare</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    </head>
+<style>
+    .container{
+        width:50%;
+        height:100%;
+    }
+</style>
+<body>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    
+    
+    <script src="/javascript/validateForms.js"></script>
+
+    <div class="col-6 offset-3">
+    
+        <h1 style="margin-left:45%">Login</h1>
+        <form action="/medicalstorelogin" method="POST" class="validated-form" novalidate>
+            <div class="mb-3">
+                <label class="form-label" for="username">Username</label>
+                <input class="form-control" type="text" id="username" name="username" required>
+                <div class="valid-feedback">
+                    Looks good!
                 </div>
-              </div>
             </div>
-          </div>
-        </body>
-          
+        
+            <div class="mb-3">
+                <label class="form-label" for="password">Password</label>
+                <input class="form-control" type="password" id="password" name="password" required>
+                <div class="valid-feedback">
+                    Looks good!
+                </div>
+            </div>
+            
+            <button class="btn btn-success">Login</button>
+        </form>
+        </div>
+</body>
 </html>
+
+
+
+    
