--- a/src/views/users/appointmentForm.ejs
+++ b/src/views/users/appointmentForm.ejs
@@ -17,29 +17,21 @@
   <script src="/javascript/validateForms.js"></script>
 
   <div class="row">
-    <h1 class="text-center">Register</h1>
+    <h1 class="text-center">Appointment</h1>
      <div class="col-6 offset-3">
     
-      <form action="/medicalstoreregister" method="POST" novalidate class="row g-3 needs-validation">
+      <form action="/appointment/<%= doctorId %>" method="POST" novalidate class="row g-3 needs-validation">
         <div class="mb-3">
-            <label class="form-label" for="username">Name</label>
-            <input class="form-control" type="text" id="username" name="username" required>
+            <label class="form-label" for="name">Name</label>
+            <input class="form-control" type="text" id="name" name="name" required>
             <div class="valid-feedback">
                 valid!
             </div>
         </div>
-
-        <div class="mb-3">
-          <label class="form-label" for="time">Time</label>
-          <input class="form-control" type="text" id="time" name="time" required>
-          <div class="valid-feedback">
-              valid!
-          </div>
-      </div>
     
         <div class="mb-3">
-          <label class="form-label" for="phone">Phone</label>
-          <input class="form-control" type="number" id="phone" name="phone" required>
+          <label class="form-label" for="age">Age</label>
+          <input class="form-control" type="number" id="age" name="age" required>
           <div class="valid-feedback">
               valid!
           </div>
@@ -53,17 +45,23 @@
         </div>
     </div>
 
-    
-    
+    <div class="mb-3">
+      <label class="form-label" for="phone">Contact No.</label>
+      <input class="form-control" type="number" id="phone" name="phone" required>
+      <div class="valid-feedback">
+          valid!
+      </div>
+  </div>
+
         <div class="mb-3">
-            <label class="form-label" for="password">Password</label>
-            <input class="form-control" type="password" id="password" name="password" required>
+            <label class="form-label" for="issue">Issues</label>
+            <input class="form-control" type="text" id="issue" name="issue" required>
             <div class="valid-feedback">
                 valid!
             </div>
         </div>
         
-        <button class="btn btn-sm btn-success">Register</button>
+        <button class="btn btn-sm btn-success">Submit</button>
     </form>
     </div>
     </div>
