updated front end

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,4 +1,4 @@
-<head>
+ <!-- <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -219,4 +219,355 @@
       tl.reverse();
     });
   </script>
-</body>
+</body> 
+
+ -->
+
+ <!DOCTYPE html>
+ <html lang="en">
+
+ <head>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>TELEMED</title>
+   <link rel="stylesheet" href="style.css">
+   <!-- icon -->
+   <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
+   <!-- GSAP  -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+ </head>
+
+ <body>
+
+
+   <div class="main-p">
+     <div class="wrap">
+
+       <!-- navbar================== -->
+       <nav class="navbar">
+
+         <div class="logo">TELEMED</div>
+         <div class="categories">
+           <ul>
+             <li><a href="/home">HOME</a></li>
+             <li><a href="/telepharm"> TELEPHARM</a></li>
+             <li><a href="/teleconsult">TELECONSULT</a></li>
+             <li><a href="/community">COMMUNITY</a></li>
+             <li><a href="/about">ABOUT</a></li>
+
+           </ul>
+         </div>
+         <div class="menu">
+           <ion-icon name="ios-menu"></ion-icon>
+         </div>
+       </nav>
+
+
+       <!-- red-bar=================== -->
+       <div class="stripe"></div>
+       <div class="stripe2"></div>
+       <div class="coke">
+         <img src="https://res.cloudinary.com/dtca2p99y/image/upload/v1708253169/istockphoto-1460830024-1024x1024-removebg-preview_lofgaj.png" class="coke-can">
+       </div>
+
+       <div class="small-coke">
+         <li><img src="https://res.cloudinary.com/dtca2p99y/image/upload/v1708253330/med1-removebg-preview_tib6zl.png" onclick="imgSlider('coke-one.png');"></li>
+         <!-- <li><img src="https://res.cloudinary.com/dtca2p99y/image/upload/v1708252251/coke-two_w6bpjk.png" onclick="imgSlider('coke-two.png');"></li> -->
+       </div>
+
+       <!-- text================= -->
+       <div class="text">
+         <h1>
+           <span class="header" style="font-size: 5vw;"> HEALTH </span>
+         </h1>
+         <h2>CARE</h2>
+         <p>
+           <span class="para" style="font-size: 1.5vw;">
+             at your door steps...
+           </span>
+         </p>
+       </div>
+
+       <div class="media">
+         <ul>
+           <li>
+             <ion-icon name="logo-facebook"></ion-icon>
+           </li>
+           <li>
+             <ion-icon name="logo-snapchat"></ion-icon>
+           </li>
+           <li>
+             <ion-icon name="logo-instagram"></ion-icon>
+           </li>
+           <li>
+             <ion-icon name="logo-youtube"></ion-icon>
+           </li>
+         </ul>
+       </div>
+     </div>
+
+   </div>
+
+   
+
+
+
+
+   <script>
+     function imgSlider(anything) {
+       document.querySelector('.coke-can').src = anything;
+     };
+
+     TweenMax.from('.navbar', 1, {
+       delay: 2,
+       x: -40,
+       opacity: 0,
+       ease: Expo.easeInOut
+     })
+
+     TweenMax.to(".stripe", 2.4, {
+       delay: 0,
+       width: "65%",
+       ease: Expo.easeInOut
+     })
+
+     TweenMax.from(".coke", 1, {
+       delay: 1.4,
+       opacity: 0,
+       y: -1000,
+       ease: Circ.easeInOut
+     })
+
+     TweenMax.from(".header", 2, {
+       delay: 1.8,
+       x: -700,
+       ease: Circ.easeInOut
+     })
+
+     TweenMax.from(".text h2", 1, {
+       delay: 3.3,
+       opacity: 0,
+       y: 40,
+       ease: Circ.easeInOut
+     })
+
+     TweenMax.from(".text .para", 1.2, {
+       delay: 3.9,
+       opacity: 0,
+       y: 40,
+       ease: Circ.easeInOut
+     })
+
+     TweenMax.from(".small-coke", 1, {
+       delay: 4.0,
+       opacity: 0,
+       y: 0,
+       ease: Expo.easeInOut
+     })
+
+     TweenMax.from(".media ul li", 2, {
+       delay: 5,
+       opacity: 5,
+       x: -40,
+       ease: Circ.easeInOut
+     })
+
+     TweenMax.from(".stripe2", 2.5, {
+       delay: 0,
+       width: 5, // Animate width to make it appear left-to-right
+       ease: Expo.easeInOut
+     });
+   </script>
+ </body>
+
+
+ <style>
+   @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Poppins:ital,wght@0,200;0,600;0,900;1,900&display=swap');
+
+   * {
+     margin: 0;
+     padding: 0;
+     box-sizing: border-box;
+   }
+
+   body {
+     width: 100%;
+     height: 100vh;
+     overflow: hidden;
+     background: #07012f;
+     font-family: 'poppins', sans-serif;
+   }
+
+   .navbar {
+     display: flex;
+     justify-content: space-between;
+     height: 80px;
+     align-items: center;
+     color: #000000;
+     padding: 0 50px;
+   }
+
+   .navbar .logo {
+     margin-right: 100px;
+     font-size: 14px;
+     text-transform: uppercase;
+     font-weight: 900;
+   }
+
+   .navbar .categories {
+     margin-right: auto;
+     position: relative;
+     right: -400px;
+   }
+
+   .navbar .categories ul li {
+     display: inline-block;
+     padding: 0 30px;
+     font-size: 15px;
+     text-decoration-color: #060606;
+     text-transform: uppercase;
+     font-weight: 600;
+
+   }
+
+   .navbar .menu {
+     margin-right: -10px;
+     font-size: 20px;
+   }
+
+   .stripe {
+     position: absolute;
+     height: 75px;
+     /* width: 100%; */
+     bottom: 45%;
+     background: linear-gradient(to right, #f07c78, #c0342f);
+   }
+
+   .stripe2 {
+
+
+     position: absolute;
+     width: 100%;
+     /* Adjust width as needed */
+     height: 100%;
+     /* Make stripe2 full height */
+     top: 0;
+     left: 10;
+     /* Position stripe2 on the left side */
+     background: linear-gradient(to right, #d39be5, #8a94ed);
+     /* Left-to-right gradient */
+     z-index: -1;
+     /* Move stripe2 behind other content */
+   }
+
+   .coke {
+     position: absolute;
+     top: 50%;
+     left: 30%;
+     z-index: 1;
+   }
+
+   .coke img {
+     transform: translate(-50%, -50%);
+     max-height: 600px;
+   }
+
+   .small-coke {
+     position: absolute;
+     left: 85%;
+     bottom: 70px;
+     transform: translateX(-50%);
+     display: flex;
+     z-index: 1;
+   }
+
+   .small-coke li {
+     list-style: none;
+     display: inline-block;
+     margin: 0 -77px;
+     cursor: pointer;
+     transition: 0.4s;
+   }
+
+   .small-coke li:hover {
+     transform: translateY(-10px);
+   }
+
+   .small-coke li img {
+     max-width: 200px;
+   }
+
+   .text {
+     position: absolute;
+     top: 120px;
+     left: 500px;
+   }
+
+   .text h1 {
+     font-size: 70px;
+     text-transform: uppercase;
+     font-weight: 900;
+     color: #000000;
+     margin-bottom: 25px;
+     position: relative;
+     overflow: hidden;
+     height: 150px;
+     width: 900px;
+   }
+
+   .text h1 .header {
+     position: absolute;
+     margin-left: 40px;
+     bottom: 25px;
+   }
+
+   .text h2 {
+     position: absolute;
+     font-family: 'Josefin Sans', sans-serif;
+     top: 100px;
+     left: 80px;
+     color: #f4f2ec;
+     font-size: 100px;
+     font-weight: 700;
+   }
+
+   .text p {
+     width: 400px;
+     font-size: 12px;
+     margin-top: 45px;
+     margin-left: 50px;
+     position: relative;
+     height: 110px;
+     color: #000000;
+     font-weight: 600;
+   }
+
+   .media {
+     position: absolute;
+     bottom: 210px;
+     left: 40px;
+   }
+
+   .media ul {
+     position: absolute;
+     list-style: none;
+   }
+
+   .logo {
+     position: relative;
+     /* Position cococola logo relative to its container */
+     z-index: 1;
+     /* Ensure the logo stays above stripe2 */
+     font-size: 20;
+   }
+
+
+   .media ul li {
+     color: #fefafa;
+     padding: 12px 0;
+     size: 5px;
+   }
+ </style>
+
+ </html>
